第三次api调用修改

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "api_service.py", "use": "@vercel/python" }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "api_service.py"
     },
     {
       "src": "/(.*)",
