--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 flask==2.0.1
 flask-cors==3.0.10
 flask-limiter==3.3.1
-requests==2.31.0 
+requests==2.31.0
+python-dotenv==1.0.0
+gunicorn==20.1.0 
