--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 flask>=2.0.1
 flask-cors>=3.0.10
 python-dotenv>=0.19.0
+requests>=2.26.0
 openai>=1.3.0
 google-generativeai>=0.1.0
 Flask-Limiter>=3.5.0
