添加对 XML 文件的正确 MIME 类型配置

--- a/vercel.json
+++ b/vercel.json
@@ -42,6 +42,13 @@
         {
             "src": "/(.*)",
             "dest": "/$1"
+        },
+        {
+            "src": "/sitemap.xml",
+            "headers": {
+                "Content-Type": "application/xml"
+            },
+            "dest": "/sitemap.xml"
         }
     ]
 } 
