--- a/vercel.json
+++ b/vercel.json
@@ -50,5 +50,11 @@
             },
             "dest": "/sitemap.xml"
         }
+    ],
+    "redirects": [
+        {
+            "source": "/sitemap.xml",
+            "destination": "/api/sitemap"
+        }
     ]
 } 
